a falta de unos poquitos de nada